# machma10-telegram-bot

./: .gitignore  README.md  config-template.toml  pyproject.toml
.github/workflows/: test.yml
src/machma/: __main__.py  api.py  bot.py  config.py  db.py
src/machma/tests/: dummy_data.py  test_api.py
src/machma/utils/aiogram/: dispatcher.py
src/machma/utils/sqlalchemy/: guc.py
